# chemic

./: Cargo.toml  LICENSE.md  README.md  cspell.json  dist-workspace.toml
.github/: linux-build-setup.yml
.github/workflows/: release.yml  rust.yml
src/: main.rs
wix/: main.wxs
