[package]
name = "chemic"
version = "0.1.3"
edition = "2021"
description = "Microphone testing tool"
license = "MIT"
readme = "README.md"
authors = ["Jacobtread <jacobtread@gmail.com>"]
keywords = ["Microphone", "Testing"]
repository = "https://github.com/jacobtread/chemic"

[dependencies]
cpal = "0.15.0"
dialoguer = "0.10.3"
ringbuf = "0.3.2"
dasp_interpolate = { version = "0.11.0", features = ["linear"] }
dasp_signal = "0.11.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Bininstall meta
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }{ archive-suffix }"
pkg-fmt = "binary-ext"
