[package]
name = "chemic"
version = "0.3.0"
edition = "2021"
description = "Microphone testing tool"
license = "MIT"
readme = "README.md"
authors = ["Jacobtread <jacobtread@gmail.com>"]
keywords = ["Microphone", "Testing"]
repository = "https://github.com/jacobtread/chemic"
homepage = "https://github.com/jacobtread/chemic"

[dependencies]
cpal = "0.15.0"
dialoguer = "0.11.0"
ringbuf = "0.3.2"
dasp_interpolate = { version = "0.11.0", features = ["linear"] }
dasp_signal = "0.11.0"

# Release build optimizations
[profile.release]
lto = true
codegen-units = 1
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Bininstall meta
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }{ archive-suffix }"
pkg-fmt = "bin"

[package.metadata.wix]
upgrade-guid = "8A474094-213D-4A76-9822-7EAFB10BEDD6"
path-guid = "B3A1F38A-791C-45E0-A524-BBCCA966D719"
license = false
eula = false
